--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "webregator",
   "private": true,
   "dependencies": {
+    "angular": "^1.6.6",
+    "angular-resource": "^1.6.6",
     "autoprefixer": "^7.1.3",
     "axios": "^0.16.2",
     "babel-core": "^6.26.0",
